2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/PcFileCache.cs:
	* Mono.Addins.Setup/SetupService.cs: Make it buildable in .net
	  2.0.

2009-08-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/SetupService.cs: Applications can now
	  register a test command to be used for testing add-ins.
	  Don't use the pkg-config command, use instead the
	  PcFileCache.

	* Mono.Addins.Setup/PcFileCache.cs: Updated.

2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins.Setup.csproj:
	* Mono.Addins.Setup/SetupTool.cs:
	* Mono.Addins.Setup/PcFileCache.cs:
	* Mono.Addins.Setup/SetupService.cs: Added a new project which
	  Implements an msbuild task for resolving add-in references.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Update target framework to 2.0.

2009-06-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/SetupService.cs: Added method for getting
	  a registry from a package name.

	* Mono.Addins.Setup/SetupTool.cs: Added some more help for the
	  info command.

2009-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins.Setup.csproj: Remove unnecessary Mono.Posix
	  reference.

2009-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Properly sign assemblies.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/SetupTool.cs: Added command for getting
	  the list of assemblies of an add-in.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * Mono.Addins.Setup.csproj: Updated.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* mono-addins-setup.pc.in: Respect custom libdir during ./configure.
	Fixes bug #443205. Patch by Diego Pettenò.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Fix building with parallel make jobs (-j8). Fixes bug
	#443206. Patch by Diego Pettenò.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 
